src/objects/TR1__Job__c.object
<CustomObject>
    <fields>
        <fullName>Active_Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Bundle</label>
        <referenceTo>Bundle__c</referenceTo>
        <relationshipLabel>Vacancies</relationshipLabel>
        <relationshipName>Vacancies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicable_Days__c</fullName>
        <label>Applicable Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apprenticeship_Training__c</fullName>
        <label>Apprenticeship Training</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Teaching Assistant Standard</fullName>
                </value>
                <value>
                    <fullName>Teaching Standard</fullName>
                </value>
                <value>
                    <fullName>PE &amp; School Sport Framework</fullName>
                </value>
                <value>
                    <fullName>LAB Technician Standard</fullName>
                </value>
                <value>
                    <fullName>School Business Manager Standard</fullName>
                </value>
                <value>
                    <fullName>Scho0l Business Director Standard</fullName>
                </value>
                <value>
                    <fullName>Human Resources Management</fullName>
                </value>
                <value>
                    <fullName>Operations Manager Standard</fullName>
                </value>
                <value>
                    <fullName>Team Leader Standard</fullName>
                </value>
                <value>
                    <fullName>Customer Service Standard</fullName>
                </value>
                <value>
                    <fullName>Business Administration Framework</fullName>
                </value>
                <value>
                    <fullName>Assistant Accountant Standard</fullName>
                </value>
                <value>
                    <fullName>Professional Accountancy Technician</fullName>
                </value>
                <value>
                    <fullName>Infrastructure Technician Standard</fullName>
                </value>
                <value>
                    <fullName>Network Engineer Standard</fullName>
                </value>
                <value>
                    <fullName>Facilities Management Standard</fullName>
                </value>
                <value>
                    <fullName>Commis Chef Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arrival_Time__c</fullName>
        <label>Arrival Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:15 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:45 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:15 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:45 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:15 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:45 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:15 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:45 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:15 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>12:45 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:15 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:45 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:15 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:45 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:15 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking_Reason__c</fullName>
        <label>Booking Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Additional Headcount</fullName>
                    <isActive>false</isActive>
                    <label>Additional Headcount</label>
                </value>
                <value>
                    <fullName>Course cover</fullName>
                    <isActive>false</isActive>
                    <label>Course cover</label>
                </value>
                <value>
                    <fullName>COVID Testing</fullName>
                </value>
                <value>
                    <fullName>Holiday Cover</fullName>
                    <isActive>false</isActive>
                    <label>Holiday Cover</label>
                </value>
                <value>
                    <fullName>Tuition / Intervention / Pupil Premium</fullName>
                    <label>Intervention/INA/LSA</label>
                </value>
                <value>
                    <fullName>Interview</fullName>
                    <isActive>false</isActive>
                    <label>Interview</label>
                </value>
                <value>
                    <fullName>Long Term</fullName>
                </value>
                <value>
                    <fullName>Love2Read</fullName>
                </value>
                <value>
                    <fullName>Love to Read/TAP</fullName>
                    <isActive>false</isActive>
                    <label>Love to Read/TAP</label>
                </value>
                <value>
                    <fullName>LT Intervention</fullName>
                </value>
                <value>
                    <fullName>Maternity/Paternity</fullName>
                    <label>LT - Maternity</label>
                </value>
                <value>
                    <fullName>LT sickness</fullName>
                    <label>LT - Sickness</label>
                </value>
                <value>
                    <fullName>Unfilled vacancy</fullName>
                    <label>LT - Unfilled vacancy</label>
                </value>
                <value>
                    <fullName>PPA cover</fullName>
                    <isActive>false</isActive>
                    <label>PPA cover</label>
                </value>
                <value>
                    <fullName>REED Global</fullName>
                </value>
                <value>
                    <fullName>Roald Dahl TA</fullName>
                    <isActive>false</isActive>
                    <label>Roald Dahl TA</label>
                </value>
                <value>
                    <fullName>SEN specialist support (TA/Tch)</fullName>
                    <label>SEN</label>
                </value>
                <value>
                    <fullName>ST sickness</fullName>
                    <label>Short Term</label>
                </value>
                <value>
                    <fullName>TA / general support</fullName>
                    <label>Support Staff/TA/Unqualified</label>
                </value>
                <value>
                    <fullName>TiQ</fullName>
                    <isActive>false</isActive>
                    <label>TiQ</label>
                </value>
                <value>
                    <fullName>Trial Day</fullName>
                </value>
                <value>
                    <fullName>Tuition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking_Type__c</fullName>
        <label>Booking Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perm</fullName>
                </value>
                <value>
                    <fullName>Promotional Day</fullName>
                </value>
                <value>
                    <fullName>Long Term</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                    <default>true</default>
                    <label>Daily</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <formula>TEXT (Owner:User.Branch__c)</formula>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Vacancies - Qualified</relationshipLabel>
        <relationshipName>Vacancies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chatter_Team__c</fullName>
        <label>Chatter Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Brighton Primary</fullName>
                </value>
                <value>
                    <fullName>Brighton Secondary</fullName>
                </value>
                <value>
                    <fullName>Cambridge</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cardiff</fullName>
                </value>
                <value>
                    <fullName>East Anglia</fullName>
                </value>
                <value>
                    <fullName>Executives</fullName>
                </value>
                <value>
                    <fullName>Huddersfield</fullName>
                </value>
                <value>
                    <fullName>Kent</fullName>
                </value>
                <value>
                    <fullName>Leeds</fullName>
                </value>
                <value>
                    <fullName>Lincs</fullName>
                </value>
                <value>
                    <fullName>Liverpool</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>Lon-Wat Candidates</fullName>
                </value>
                <value>
                    <fullName>Manchester</fullName>
                </value>
                <value>
                    <fullName>Newcastle</fullName>
                </value>
                <value>
                    <fullName>North East</fullName>
                </value>
                <value>
                    <fullName>Nottingham</fullName>
                </value>
                <value>
                    <fullName>Overseas</fullName>
                </value>
                <value>
                    <fullName>Perm Team North</fullName>
                </value>
                <value>
                    <fullName>Preston</fullName>
                </value>
                <value>
                    <fullName>Sheffield</fullName>
                </value>
                <value>
                    <fullName>Southampton</fullName>
                </value>
                <value>
                    <fullName>Strategic Team North East</fullName>
                </value>
                <value>
                    <fullName>Strategic Team Nottingham</fullName>
                </value>
                <value>
                    <fullName>Strategic Team South</fullName>
                </value>
                <value>
                    <fullName>Thames Valley</fullName>
                </value>
                <value>
                    <fullName>Watford</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Mobile__c</fullName>
        <formula>TR1__Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>01:00 AM</fullName>
                </value>
                <value>
                    <fullName>01:30 AM</fullName>
                </value>
                <value>
                    <fullName>02:00 AM</fullName>
                </value>
                <value>
                    <fullName>02:30 AM</fullName>
                </value>
                <value>
                    <fullName>03:00 AM</fullName>
                </value>
                <value>
                    <fullName>03:30 AM</fullName>
                </value>
                <value>
                    <fullName>04:00 AM</fullName>
                </value>
                <value>
                    <fullName>04:30 AM</fullName>
                </value>
                <value>
                    <fullName>05:00 AM</fullName>
                </value>
                <value>
                    <fullName>05:30 AM</fullName>
                </value>
                <value>
                    <fullName>06:00 AM</fullName>
                </value>
                <value>
                    <fullName>06:30 AM</fullName>
                </value>
                <value>
                    <fullName>07:00 AM</fullName>
                </value>
                <value>
                    <fullName>07:30 AM</fullName>
                </value>
                <value>
                    <fullName>08:00 AM</fullName>
                </value>
                <value>
                    <fullName>08:30 AM</fullName>
                </value>
                <value>
                    <fullName>09:00 AM</fullName>
                </value>
                <value>
                    <fullName>09:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>01:00 PM</fullName>
                </value>
                <value>
                    <fullName>01:30 PM</fullName>
                </value>
                <value>
                    <fullName>02:00 PM</fullName>
                </value>
                <value>
                    <fullName>02:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Friday_Extra_Duties_Hours__c</fullName>
        <label>Friday Extra Duties Hours</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Friday_Shift__c</fullName>
        <label>Friday Shift</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Full Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Friday_s_Shift__c</fullName>
        <label>Friday&apos;s Shift</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Full Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Safety_Issues__c</fullName>
        <label>Health &amp; Safety Issues?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Safety_Notes__c</fullName>
        <label>Health &amp; Safety Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interview_Trial_Arranged_Date__c</fullName>
        <label>Interview/Trial Arranged Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interview_Trial_Date__c</fullName>
        <label>Interview/Trial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interview_Trial__c</fullName>
        <label>Interview/Trial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Interview</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_in_6_weeks_date__c</fullName>
        <formula>TR1__Estimated_Start_Date__c + 42</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice in 6 weeks date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1-2-1 Tutor (Primary)</fullName>
                    <isActive>false</isActive>
                    <label>1-2-1 Tutor (Primary)</label>
                </value>
                <value>
                    <fullName>1-2-1 Tutor (Secondary)</fullName>
                    <isActive>false</isActive>
                    <label>1-2-1 Tutor (Secondary)</label>
                </value>
                <value>
                    <fullName>2nd in Department</fullName>
                    <isActive>false</isActive>
                    <label>2nd in Department</label>
                </value>
                <value>
                    <fullName>Acting Assistant Head Teacher</fullName>
                    <isActive>false</isActive>
                    <label>Acting Assistant Head Teacher</label>
                </value>
                <value>
                    <fullName>Acting Assistant Principal</fullName>
                    <isActive>false</isActive>
                    <label>Acting Assistant Principal</label>
                </value>
                <value>
                    <fullName>Acting Deputy Head Teacher</fullName>
                    <isActive>false</isActive>
                    <label>Acting Deputy Head Teacher</label>
                </value>
                <value>
                    <fullName>Acting Head of Department</fullName>
                    <isActive>false</isActive>
                    <label>Acting Head of Department</label>
                </value>
                <value>
                    <fullName>Acting Head of Faculty</fullName>
                    <isActive>false</isActive>
                    <label>Acting Head of Faculty</label>
                </value>
                <value>
                    <fullName>Acting Head Teacher</fullName>
                    <isActive>false</isActive>
                    <label>Acting Head Teacher</label>
                </value>
                <value>
                    <fullName>Acting Principal</fullName>
                    <isActive>false</isActive>
                    <label>Acting Principal</label>
                </value>
                <value>
                    <fullName>Acting Vice Principal</fullName>
                    <isActive>false</isActive>
                    <label>Acting Vice Principal</label>
                </value>
                <value>
                    <fullName>Admin Assistant</fullName>
                    <isActive>false</isActive>
                    <label>Admin Assistant</label>
                </value>
                <value>
                    <fullName>Assistant Faculty Leader</fullName>
                    <isActive>false</isActive>
                    <label>Assistant Faculty Leader</label>
                </value>
                <value>
                    <fullName>Assistant Head Teacher</fullName>
                    <isActive>false</isActive>
                    <label>Assistant Head Teacher</label>
                </value>
                <value>
                    <fullName>Assistant Principal</fullName>
                    <isActive>false</isActive>
                    <label>Assistant Principal</label>
                </value>
                <value>
                    <fullName>Assistant Vice Principal</fullName>
                    <isActive>false</isActive>
                    <label>Assistant Vice Principal</label>
                </value>
                <value>
                    <fullName>Attendance &amp; Welfare Officer</fullName>
                    <isActive>false</isActive>
                    <label>Attendance &amp; Welfare Officer</label>
                </value>
                <value>
                    <fullName>Baby Room Leader</fullName>
                    <isActive>false</isActive>
                    <label>Baby Room Leader</label>
                </value>
                <value>
                    <fullName>Business Manager</fullName>
                    <isActive>false</isActive>
                    <label>Business Manager</label>
                </value>
                <value>
                    <fullName>Careers Co-coordinator</fullName>
                    <isActive>false</isActive>
                    <label>Careers Co-coordinator</label>
                </value>
                <value>
                    <fullName>Chair of Governors</fullName>
                    <isActive>false</isActive>
                    <label>Chair of Governors</label>
                </value>
                <value>
                    <fullName>Cover Manager</fullName>
                    <isActive>false</isActive>
                    <label>Cover Manager</label>
                </value>
                <value>
                    <fullName>Cover Supervisor</fullName>
                </value>
                <value>
                    <fullName>Day Nursery Owner</fullName>
                    <isActive>false</isActive>
                    <label>Day Nursery Owner</label>
                </value>
                <value>
                    <fullName>Deputy Care Manager</fullName>
                    <isActive>false</isActive>
                    <label>Deputy Care Manager</label>
                </value>
                <value>
                    <fullName>Deputy Head Teacher</fullName>
                    <isActive>false</isActive>
                    <label>Deputy Head Teacher</label>
                </value>
                <value>
                    <fullName>Deputy Principal</fullName>
                    <isActive>false</isActive>
                    <label>Deputy Principal</label>
                </value>
                <value>
                    <fullName>Early Years Practitioner</fullName>
                    <isActive>false</isActive>
                    <label>Early Years Practitioner</label>
                </value>
                <value>
                    <fullName>ESOL/EAL Tutor</fullName>
                    <isActive>false</isActive>
                    <label>ESOL/EAL Tutor</label>
                </value>
                <value>
                    <fullName>Examinations Officer</fullName>
                    <isActive>false</isActive>
                    <label>Examinations Officer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEA__c</fullName>
        <formula>TEXT ( TR1__Account__r.LEA__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vacancies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maximum_Annual_Salary__c</fullName>
        <label>Annual Salary</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Regional_Salary_Scales__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>M1 - £27,000</fullName>
                </value>
                <value>
                    <fullName>M2 - £28,408</fullName>
                </value>
                <value>
                    <fullName>M3 - £29,889</fullName>
                </value>
                <value>
                    <fullName>M4 - £31,446</fullName>
                </value>
                <value>
                    <fullName>M5 - £33,865</fullName>
                </value>
                <value>
                    <fullName>M6 - £36,387</fullName>
                </value>
                <value>
                    <fullName>UPS1 - £41,497</fullName>
                </value>
                <value>
                    <fullName>UPS2 - £43,536</fullName>
                </value>
                <value>
                    <fullName>UPS3 - £45,000</fullName>
                </value>
                <value>
                    <fullName>UQ1 - £19,893</fullName>
                </value>
                <value>
                    <fullName>UQ2 - £21,731</fullName>
                </value>
                <value>
                    <fullName>UQ3 - £23,571</fullName>
                </value>
                <value>
                    <fullName>UQ4 - £25,410</fullName>
                </value>
                <value>
                    <fullName>UQ5 - £27,249</fullName>
                </value>
                <value>
                    <fullName>UQ6 - £29,088</fullName>
                </value>
                <value>
                    <fullName>M1 - £25,117</fullName>
                </value>
                <value>
                    <fullName>M2 - £26,674</fullName>
                </value>
                <value>
                    <fullName>M3 - £28,325</fullName>
                </value>
                <value>
                    <fullName>M4 - £30,080</fullName>
                </value>
                <value>
                    <fullName>M5 - £32,630</fullName>
                </value>
                <value>
                    <fullName>M6 - £35,116</fullName>
                </value>
                <value>
                    <fullName>UPS1 - £37,599</fullName>
                </value>
                <value>
                    <fullName>UPS2 - £38,991</fullName>
                </value>
                <value>
                    <fullName>UPS3 - £40,433</fullName>
                </value>
                <value>
                    <fullName>UQ1 - £18,789</fullName>
                </value>
                <value>
                    <fullName>UQ2 - £20,629</fullName>
                </value>
                <value>
                    <fullName>UQ3 - £22,470</fullName>
                </value>
                <value>
                    <fullName>UQ4 - £24,311</fullName>
                </value>
                <value>
                    <fullName>UQ5 - £26,150</fullName>
                </value>
                <value>
                    <fullName>UQ6 - £27,992</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maximum_Hour_Charge_Rate__c</fullName>
        <label>Maximum Hour Charge Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Hour_Pay_Rate__c</fullName>
        <label>Maximum Hour Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>